--- a/style/HomePage/homePageFlow.css
+++ b/style/HomePage/homePageFlow.css
@@ -76,6 +76,8 @@
   font-weight: 500;
   line-height: 140%; /* 50.4px */
   letter-spacing: 16px;
+  position: relative;
+  left: 16px;
 }
 .flowbox .flow .flowImgBox .flowPBox p {
   opacity: 0;
