--- a/style/HomePage/homePageFlow.scss
+++ b/style/HomePage/homePageFlow.scss
@@ -102,12 +102,15 @@
                 font-weight: 500;
                 line-height: 140%; /* 50.4px */
                 letter-spacing: 16px;
-
+                position: relative;
+                left: 16px;
 
                 p{
+
                     opacity: 0;
                     transform: translateX(-20px);
                     transition: 0.5s ease-in-out;
+
 
                 }
             }
