--- a/style/footer.css
+++ b/style/footer.css
@@ -1,6 +1,7 @@
 footer {
   position: relative;
   width: 100%;
+  height: 100dvh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -21,6 +22,7 @@ footer .footerBox {
   }
 }
 footer .footerBox .footerTittleBox {
+  position: relative;
   width: 24%;
   height: 100dvh;
   /* background-color: beige; */
@@ -32,6 +34,7 @@ footer .footerBox .footerTittleBox {
   footer .footerBox .footerTittleBox {
     height: 20dvh;
     width: 86%;
+    margin-bottom: 20px;
   }
 }
 footer .footerBox .footerTittleBox .footerTittleTop {
@@ -40,7 +43,7 @@ footer .footerBox .footerTittleBox .footerTittleTop {
 }
 @media (max-width: 762px) {
   footer .footerBox .footerTittleBox .footerTittleTop {
-    margin: 8% 0 2% 0;
+    margin: 8% 0 1% 0;
   }
 }
 footer .footerBox .footerTittleBox .footerTittleTop p {
@@ -63,6 +66,7 @@ footer .footerBox .footerTittleBox .footerTittleTop p {
 @media (max-width: 762px) {
   footer .footerBox .footerTittleBox .footerTittleTop p {
     font-size: 32px;
+    letter-spacing: 2px;
   }
 }
 @media (max-width: 390px) {
@@ -110,7 +114,7 @@ footer .footerBox .footerTittleBox .footerTittleBottom p + p {
 }
 @media (max-width: 762px) {
   footer .footerBox .footerTittleBox .footerTittleBottom p + p {
-    margin: 1% 0 0% 0;
+    margin: 0% 0 0% 0;
   }
 }
 footer .footerBox .footerContentBox {
@@ -121,12 +125,15 @@ footer .footerBox .footerContentBox {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  gap: 20px;
 }
 @media (max-width: 762px) {
   footer .footerBox .footerContentBox {
     height: 40dvh;
     width: 86%;
     justify-content: center;
+    gap: 10px;
   }
 }
 footer .footerBox .footerContentBox .footerContentIndex {
@@ -188,7 +195,7 @@ footer .footerBox .footerContentBox .footerContentIndex li + li {
 }
 @media (max-width: 762px) {
   footer .footerBox .footerContentBox .footerContentIndex li + li {
-    margin: 2% 0 0% 0;
+    margin: 1% 0 0% 0;
   }
 }
 footer .footerBox .footerContentBox .footerContentsocial {
@@ -255,8 +262,8 @@ footer .footerBox .footerLineBox .footerLineImgBox {
 }
 @media (max-width: 762px) {
   footer .footerBox .footerLineBox .footerLineImgBox {
-    width: 40dvw;
-    height: 40dvw;
+    width: 35dvw;
+    height: 35dvw;
   }
 }
 @media (max-width: 575px) {
@@ -301,9 +308,9 @@ footer .footerBox .footerLineBox p {
 }
 @media (max-width: 762px) {
   footer .footerBox .footerLineBox p {
-    font-size: 14px;
+    font-size: 12px;
     height: 5%;
-    margin: 0 0 3% 0;
+    margin: 0 0 5% 0;
     /* background-color: aqua; */
   }
 }/*# sourceMappingURL=footer.css.map */
