--- a/style/footer.scss
+++ b/style/footer.scss
@@ -1,6 +1,7 @@
 footer{
     position: relative;
     width: 100%;
+    height: 100dvh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -14,9 +15,11 @@ footer{
         align-items: center;
         overflow: hidden;
         @media(max-width: 762px){
-                flex-direction: column;
+            flex-direction: column;
+            
         }
         .footerTittleBox{
+            position: relative;
             width: 24%;
             height: 100dvh;
             /* background-color: beige; */
@@ -26,12 +29,13 @@ footer{
             @media(max-width: 762px){
                 height: 20dvh;
                 width: 86%;
+                margin-bottom: 20px;
             }
             .footerTittleTop{
                 width: 100%;
                 margin: 15% 0 0% 0;
                 @media(max-width: 762px){
-                    margin: 8% 0 2% 0;
+                    margin: 8% 0 1% 0;
                 }
                 p{
                     width: 150%;
@@ -50,6 +54,7 @@ footer{
                     }
                     @media(max-width: 762px){
                         font-size: 32px;
+                        letter-spacing: 2px;
                     }
                     @media(max-width: 390px){
                         font-size: 20px;
@@ -91,7 +96,7 @@ footer{
                 p+p{
                     margin: 3% 0 0% 0;
                     @media(max-width: 762px){
-                        margin: 1% 0 0% 0;
+                        margin: 0% 0 0% 0;
                     }
                 }
             }
@@ -105,11 +110,14 @@ footer{
             flex-direction: column;
             justify-content: center;
             align-items: center;
-
+            position: relative;
+            gap: 20px;
             @media(max-width: 762px){
                 height: 40dvh;
                 width: 86%;
                 justify-content: center;
+                gap: 10px;
+
                 
             }
             .footerContentIndex{
@@ -168,7 +176,7 @@ footer{
                         margin: 8% 0 0% 0;
                     }
                     @media(max-width: 762px){
-                        margin: 2% 0 0% 0;
+                        margin: 1% 0 0% 0;
                     }
                 }
 
@@ -230,8 +238,8 @@ footer{
                 background-color: #F5F5F5;
                 margin: 0% 0 0 0;
                 @media(max-width: 762px){
-                    width: 40dvw;
-                    height: 40dvw;
+                    width: 35dvw;
+                    height: 35dvw;
                 
                 }
                 @media(max-width: 575px){
@@ -276,9 +284,9 @@ footer{
                         /* background-color: aqua; */
                 }
                 @media(max-width: 762px){
-                        font-size: 14px;
+                        font-size: 12px;
                         height: 5%;
-                        margin: 0 0 3% 0;
+                        margin: 0 0 5% 0;
                         /* background-color: aqua; */
                 }
             }
