--- a/style/header.css
+++ b/style/header.css
@@ -3,17 +3,19 @@ header {
   position: fixed;
   width: 100%;
   height: 40px;
-  z-index: 20;
+  z-index: 50;
   display: flex;
   justify-content: flex-end;
   top: 0;
   left: 0;
+  pointer-events: none;
 }
 header input {
   display: none;
   overflow: hidden;
 }
 header #hamBox {
+  pointer-events: all;
   position: relative;
   width: 40px;
   height: 40px;
